[package]
edition = "2021"
name = "scriptor"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

full = [
  "fs",
  "os",
  "http",
  "vm",
]

fs = ["tokio/fs"]
http = ["reqwest"]
os = ["tokio/io-std"]
vm = ["tokio/fs"]

typescript = ["swc", "swc_common", "swc_ecma_parser"]

[[example]]
name = "main"
path = "examples/main.rs"
required-features = ["full", "typescript"]

[dependencies]
rquickjs = {version = "0.1", features = ["tokio", "macro", "futures", "loader", "array-buffer"]}

tokio = {version = "1", features = ["sync", "io-util"]}
tokio-stream = {version = "0.1", features = ["io-util"]}

reqwest = {version = "0.11", optional = true}

futures-core = "0.3"
futures-lite = "1"

cfg-if = "1"
pin-project-lite = "0.2"

log = "0.4"

# Typescript
swc = {version = "0.174.0", optional = true}
swc_common = {version = "0.17.24", features = ["tty-emitter"], optional = true}
swc_ecma_parser = {version = "0.102.13", optional = true}

[dev-dependencies]
tokio = {version = "1", features = ["sync", "io-util", "rt", "macros"]}

[build-dependencies]
# Typescript
swc = {version = "0.174.0"}
swc_common = {version = "0.17.24", features = ["tty-emitter"]}
swc_ecma_parser = {version = "0.102.13"}
