[package]
edition = "2021"
name = "scriptor-typescript"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
swc = {version = "0.188.0"}
swc_common = {version = "0.18.9", features = ["tty-emitter"]}
swc_ecma_parser = {version = "0.105.3"}
wit-bindgen-rust = {git = "https://github.com/bytecodealliance/wit-bindgen"}
